--- a/cuisine.html
+++ b/cuisine.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport"
+   content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="noindex">
   <title>お料理 - 石井花壇｜温泉旅館【公式サイト】</title>
   <meta name="description" content="日本古来の素材と現代的表現を併せ持つ温泉旅館、石井花壇。伝統的「和」の息づく空間で、至極のひとときをお過ごしください">
   <link rel="stylesheet" href="css/reset.css">
